explicit-python/explicit/antlr/EQLParser.py
# Generated from EQL.g4 by ANTLR 4.8
# encoding: utf-8
import sys
from io import StringIO

from antlr4 import *

if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class EQLParser ( Parser ):

    grammarFileName = "EQL.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'['", "']'", "'!'", "'`'", "'+'", "'^'", 
                     "'*'", "'?'", "'~'", "':'", "'\\'", "'#'", "<INVALID>", 
                     "'('", "')'", "'{'", "'}'", "<INVALID>", "','", "'.'", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "';'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "WILDCARD", 
                      "OPTIONAL", "TILDE", "COLON", "BACKSLASH", "HASHTAG", 
                      "BOOLEAN", "ROUND_LEFT", "ROUND_RIGHT", "CURLY_LEFT", 
                      "CURLY_RIGHT", "TEXT", "COMMA", "DOT", "ESCAPED", 
                      "WHITESPACE", "LINE_COMMENT", "SEMICOLON" ]

    RULE_token = 0
    RULE_escaped = 1
    RULE_group = 2
    RULE_like = 3
    RULE_text = 4
    RULE_not_ = 5
    RULE_wildcard = 6
    RULE_optional = 7
    RULE_alias = 8
    RULE_label = 9
    RULE_slot = 10
    RULE_atomic = 11
    RULE_regex = 12

    ruleNames =  [ "token", "escaped", "group", "like", "text", "not_", 
                   "wildcard", "optional", "alias", "label", "slot", "atomic", 
                   "regex" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    WILDCARD=7
    OPTIONAL=8
    TILDE=9
    COLON=10
    BACKSLASH=11
    HASHTAG=12
    BOOLEAN=13
    ROUND_LEFT=14
    ROUND_RIGHT=15
    CURLY_LEFT=16
    CURLY_RIGHT=17
    TEXT=18
    COMMA=19
    DOT=20
    ESCAPED=21
    WHITESPACE=22
    LINE_COMMENT=23
    SEMICOLON=24

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class TokenContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(EQLParser.EOF, 0)

        def text(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(EQLParser.TextContext)
            else:
                return self.getTypedRuleContext(EQLParser.TextContext,i)


        def escaped(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(EQLParser.EscapedContext)
            else:
                return self.getTypedRuleContext(EQLParser.EscapedContext,i)


        def wildcard(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(EQLParser.WildcardContext)
            else:
                return self.getTypedRuleContext(EQLParser.WildcardContext,i)


        def optional(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(EQLParser.OptionalContext)
            else:
                return self.getTypedRuleContext(EQLParser.OptionalContext,i)


        def label(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(EQLParser.LabelContext)
            else:
                return self.getTypedRuleContext(EQLParser.LabelContext,i)


        def group(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(EQLParser.GroupContext)
            else:
                return self.getTypedRuleContext(EQLParser.GroupContext,i)


        def like(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(EQLParser.LikeContext)
            else:
                return self.getTypedRuleContext(EQLParser.LikeContext,i)


        def not_(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(EQLParser.Not_Context)
            else:
                return self.getTypedRuleContext(EQLParser.Not_Context,i)


        def slot(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(EQLParser.SlotContext)
            else:
                return self.getTypedRuleContext(EQLParser.SlotContext,i)


        def alias(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(EQLParser.AliasContext)
            else:
                return self.getTypedRuleContext(EQLParser.AliasContext,i)


        def atomic(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(EQLParser.AtomicContext)
            else:
                return self.getTypedRuleContext(EQLParser.AtomicContext,i)


        def regex(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(EQLParser.RegexContext)
            else:
                return self.getTypedRuleContext(EQLParser.RegexContext,i)


        def getRuleIndex(self):
            return EQLParser.RULE_token

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterToken" ):
                listener.enterToken(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitToken" ):
                listener.exitToken(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitToken" ):
                return visitor.visitToken(self)
            else:
                return visitor.visitChildren(self)




    def token(self):

        localctx = EQLParser.TokenContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_token)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 40
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << EQLParser.T__0) | (1 << EQLParser.T__2) | (1 << EQLParser.T__3) | (1 << EQLParser.WILDCARD) | (1 << EQLParser.TILDE) | (1 << EQLParser.HASHTAG) | (1 << EQLParser.ROUND_LEFT) | (1 << EQLParser.CURLY_LEFT) | (1 << EQLParser.TEXT) | (1 << EQLParser.ESCAPED))) != 0):
                self.state = 38
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
                if la_ == 1:
                    self.state = 26
                    self.text()
                    pass

                elif la_ == 2:
                    self.state = 27
                    self.escaped()
                    pass

                elif la_ == 3:
                    self.state = 28
                    self.wildcard()
                    pass

                elif la_ == 4:
                    self.state = 29
                    self.optional()
                    pass

                elif la_ == 5:
                    self.state = 30
                    self.label()
                    pass

                elif la_ == 6:
                    self.state = 31
                    self.group()
                    pass

                elif la_ == 7:
                    self.state = 32
                    self.like()
                    pass

                elif la_ == 8:
                    self.state = 33
                    self.not_()
                    pass

                elif la_ == 9:
                    self.state = 34
                    self.slot()
                    pass

                elif la_ == 10:
                    self.state = 35
                    self.alias()
                    pass

                elif la_ == 11:
                    self.state = 36
                    self.atomic()
                    pass

                elif la_ == 12:
                    self.state = 37
                    self.regex()
                    pass


                self.state = 42
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 43
            self.match(EQLParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EscapedContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ESCAPED(self):
            return self.getToken(EQLParser.ESCAPED, 0)

        def getRuleIndex(self):
            return EQLParser.RULE_escaped

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEscaped" ):
                listener.enterEscaped(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEscaped" ):
                listener.exitEscaped(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEscaped" ):
                return visitor.visitEscaped(self)
            else:
                return visitor.visitChildren(self)




    def escaped(self):

        localctx = EQLParser.EscapedContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_escaped)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 45
            self.match(EQLParser.ESCAPED)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GroupContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def text(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(EQLParser.TextContext)
            else:
                return self.getTypedRuleContext(EQLParser.TextContext,i)


        def not_(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(EQLParser.Not_Context)
            else:
                return self.getTypedRuleContext(EQLParser.Not_Context,i)


        def like(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(EQLParser.LikeContext)
            else:
                return self.getTypedRuleContext(EQLParser.LikeContext,i)


        def getRuleIndex(self):
            return EQLParser.RULE_group

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGroup" ):
                listener.enterGroup(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGroup" ):
                listener.exitGroup(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGroup" ):
                return visitor.visitGroup(self)
            else:
                return visitor.visitChildren(self)




    def group(self):

        localctx = EQLParser.GroupContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_group)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 47
            self.match(EQLParser.T__0)
            self.state = 53
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << EQLParser.T__2) | (1 << EQLParser.TILDE) | (1 << EQLParser.TEXT))) != 0):
                self.state = 51
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [EQLParser.TEXT]:
                    self.state = 48
                    self.text()
                    pass
                elif token in [EQLParser.T__2]:
                    self.state = 49
                    self.not_()
                    pass
                elif token in [EQLParser.TILDE]:
                    self.state = 50
                    self.like()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 55
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 56
            self.match(EQLParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LikeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TILDE(self):
            return self.getToken(EQLParser.TILDE, 0)

        def text(self):
            return self.getTypedRuleContext(EQLParser.TextContext,0)


        def getRuleIndex(self):
            return EQLParser.RULE_like

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLike" ):
                listener.enterLike(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLike" ):
                listener.exitLike(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLike" ):
                return visitor.visitLike(self)
            else:
                return visitor.visitChildren(self)




    def like(self):

        localctx = EQLParser.LikeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_like)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 58
            self.match(EQLParser.TILDE)
            self.state = 59
            self.text()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TextContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TEXT(self):
            return self.getToken(EQLParser.TEXT, 0)

        def getRuleIndex(self):
            return EQLParser.RULE_text

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterText" ):
                listener.enterText(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitText" ):
                listener.exitText(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitText" ):
                return visitor.visitText(self)
            else:
                return visitor.visitChildren(self)




    def text(self):

        localctx = EQLParser.TextContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_text)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 61
            self.match(EQLParser.TEXT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Not_Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def text(self):
            return self.getTypedRuleContext(EQLParser.TextContext,0)


        def group(self):
            return self.getTypedRuleContext(EQLParser.GroupContext,0)


        def like(self):
            return self.getTypedRuleContext(EQLParser.LikeContext,0)


        def getRuleIndex(self):
            return EQLParser.RULE_not_

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNot_" ):
                listener.enterNot_(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNot_" ):
                listener.exitNot_(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNot_" ):
                return visitor.visitNot_(self)
            else:
                return visitor.visitChildren(self)




    def not_(self):

        localctx = EQLParser.Not_Context(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_not_)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 63
            self.match(EQLParser.T__2)
            self.state = 67
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [EQLParser.TEXT]:
                self.state = 64
                self.text()
                pass
            elif token in [EQLParser.T__0]:
                self.state = 65
                self.group()
                pass
            elif token in [EQLParser.TILDE]:
                self.state = 66
                self.like()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WildcardContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WILDCARD(self):
            return self.getToken(EQLParser.WILDCARD, 0)

        def getRuleIndex(self):
            return EQLParser.RULE_wildcard

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWildcard" ):
                listener.enterWildcard(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWildcard" ):
                listener.exitWildcard(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWildcard" ):
                return visitor.visitWildcard(self)
            else:
                return visitor.visitChildren(self)




    def wildcard(self):

        localctx = EQLParser.WildcardContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_wildcard)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 69
            self.match(EQLParser.WILDCARD)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OptionalContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OPTIONAL(self):
            return self.getToken(EQLParser.OPTIONAL, 0)

        def text(self):
            return self.getTypedRuleContext(EQLParser.TextContext,0)


        def group(self):
            return self.getTypedRuleContext(EQLParser.GroupContext,0)


        def like(self):
            return self.getTypedRuleContext(EQLParser.LikeContext,0)


        def label(self):
            return self.getTypedRuleContext(EQLParser.LabelContext,0)


        def slot(self):
            return self.getTypedRuleContext(EQLParser.SlotContext,0)


        def atomic(self):
            return self.getTypedRuleContext(EQLParser.AtomicContext,0)


        def getRuleIndex(self):
            return EQLParser.RULE_optional

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOptional" ):
                listener.enterOptional(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOptional" ):
                listener.exitOptional(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOptional" ):
                return visitor.visitOptional(self)
            else:
                return visitor.visitChildren(self)




    def optional(self):

        localctx = EQLParser.OptionalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_optional)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [EQLParser.TEXT]:
                self.state = 71
                self.text()
                pass
            elif token in [EQLParser.T__0]:
                self.state = 72
                self.group()
                pass
            elif token in [EQLParser.TILDE]:
                self.state = 73
                self.like()
                pass
            elif token in [EQLParser.HASHTAG]:
                self.state = 74
                self.label()
                pass
            elif token in [EQLParser.CURLY_LEFT]:
                self.state = 75
                self.slot()
                pass
            elif token in [EQLParser.ROUND_LEFT]:
                self.state = 76
                self.atomic()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 79
            self.match(EQLParser.OPTIONAL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AliasContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COLON(self):
            return self.getToken(EQLParser.COLON, 0)

        def TEXT(self):
            return self.getToken(EQLParser.TEXT, 0)

        def text(self):
            return self.getTypedRuleContext(EQLParser.TextContext,0)


        def group(self):
            return self.getTypedRuleContext(EQLParser.GroupContext,0)


        def like(self):
            return self.getTypedRuleContext(EQLParser.LikeContext,0)


        def label(self):
            return self.getTypedRuleContext(EQLParser.LabelContext,0)


        def slot(self):
            return self.getTypedRuleContext(EQLParser.SlotContext,0)


        def optional(self):
            return self.getTypedRuleContext(EQLParser.OptionalContext,0)


        def atomic(self):
            return self.getTypedRuleContext(EQLParser.AtomicContext,0)


        def getRuleIndex(self):
            return EQLParser.RULE_alias

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAlias" ):
                listener.enterAlias(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAlias" ):
                listener.exitAlias(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAlias" ):
                return visitor.visitAlias(self)
            else:
                return visitor.visitChildren(self)




    def alias(self):

        localctx = EQLParser.AliasContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_alias)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 88
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.state = 81
                self.text()
                pass

            elif la_ == 2:
                self.state = 82
                self.group()
                pass

            elif la_ == 3:
                self.state = 83
                self.like()
                pass

            elif la_ == 4:
                self.state = 84
                self.label()
                pass

            elif la_ == 5:
                self.state = 85
                self.slot()
                pass

            elif la_ == 6:
                self.state = 86
                self.optional()
                pass

            elif la_ == 7:
                self.state = 87
                self.atomic()
                pass


            self.state = 90
            self.match(EQLParser.COLON)
            self.state = 91
            self.match(EQLParser.TEXT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LabelContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def HASHTAG(self):
            return self.getToken(EQLParser.HASHTAG, 0)

        def text(self):
            return self.getTypedRuleContext(EQLParser.TextContext,0)


        def getRuleIndex(self):
            return EQLParser.RULE_label

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLabel" ):
                listener.enterLabel(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLabel" ):
                listener.exitLabel(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLabel" ):
                return visitor.visitLabel(self)
            else:
                return visitor.visitChildren(self)




    def label(self):

        localctx = EQLParser.LabelContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_label)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            self.match(EQLParser.HASHTAG)
            self.state = 94
            self.text()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SlotContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CURLY_LEFT(self):
            return self.getToken(EQLParser.CURLY_LEFT, 0)

        def TEXT(self):
            return self.getToken(EQLParser.TEXT, 0)

        def CURLY_RIGHT(self):
            return self.getToken(EQLParser.CURLY_RIGHT, 0)

        def getRuleIndex(self):
            return EQLParser.RULE_slot

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSlot" ):
                listener.enterSlot(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSlot" ):
                listener.exitSlot(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSlot" ):
                return visitor.visitSlot(self)
            else:
                return visitor.visitChildren(self)




    def slot(self):

        localctx = EQLParser.SlotContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_slot)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            self.match(EQLParser.CURLY_LEFT)
            self.state = 97
            self.match(EQLParser.TEXT)
            self.state = 98
            self.match(EQLParser.CURLY_RIGHT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AtomicContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ROUND_LEFT(self):
            return self.getToken(EQLParser.ROUND_LEFT, 0)

        def ROUND_RIGHT(self):
            return self.getToken(EQLParser.ROUND_RIGHT, 0)

        def text(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(EQLParser.TextContext)
            else:
                return self.getTypedRuleContext(EQLParser.TextContext,i)


        def like(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(EQLParser.LikeContext)
            else:
                return self.getTypedRuleContext(EQLParser.LikeContext,i)


        def getRuleIndex(self):
            return EQLParser.RULE_atomic

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAtomic" ):
                listener.enterAtomic(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAtomic" ):
                listener.exitAtomic(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAtomic" ):
                return visitor.visitAtomic(self)
            else:
                return visitor.visitChildren(self)




    def atomic(self):

        localctx = EQLParser.AtomicContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_atomic)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self.match(EQLParser.ROUND_LEFT)
            self.state = 105
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==EQLParser.TILDE or _la==EQLParser.TEXT:
                self.state = 103
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [EQLParser.TEXT]:
                    self.state = 101
                    self.text()
                    pass
                elif token in [EQLParser.TILDE]:
                    self.state = 102
                    self.like()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 107
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 108
            self.match(EQLParser.ROUND_RIGHT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RegexContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return EQLParser.RULE_regex

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRegex" ):
                listener.enterRegex(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRegex" ):
                listener.exitRegex(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRegex" ):
                return visitor.visitRegex(self)
            else:
                return visitor.visitChildren(self)




    def regex(self):

        localctx = EQLParser.RegexContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_regex)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            self.match(EQLParser.T__3)
            self.state = 114 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 114
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
                if la_ == 1:
                    self.state = 111
                    _la = self._input.LA(1)
                    if _la <= 0 or _la==EQLParser.T__3:
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()
                    pass

                elif la_ == 2:
                    self.state = 112
                    self.match(EQLParser.T__4)
                    pass

                elif la_ == 3:
                    self.state = 113
                    self.match(EQLParser.T__5)
                    pass


                self.state = 116 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << EQLParser.T__0) | (1 << EQLParser.T__1) | (1 << EQLParser.T__2) | (1 << EQLParser.T__4) | (1 << EQLParser.T__5) | (1 << EQLParser.WILDCARD) | (1 << EQLParser.OPTIONAL) | (1 << EQLParser.TILDE) | (1 << EQLParser.COLON) | (1 << EQLParser.BACKSLASH) | (1 << EQLParser.HASHTAG) | (1 << EQLParser.BOOLEAN) | (1 << EQLParser.ROUND_LEFT) | (1 << EQLParser.ROUND_RIGHT) | (1 << EQLParser.CURLY_LEFT) | (1 << EQLParser.CURLY_RIGHT) | (1 << EQLParser.TEXT) | (1 << EQLParser.COMMA) | (1 << EQLParser.DOT) | (1 << EQLParser.ESCAPED) | (1 << EQLParser.WHITESPACE) | (1 << EQLParser.LINE_COMMENT) | (1 << EQLParser.SEMICOLON))) != 0)):
                    break

            self.state = 118
            self.match(EQLParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





